[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/logo_big.png" type="Texture" id=3]
[ext_resource path="res://styles/background_style.tres" type="StyleBox" id=4]

[node name="main_menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.269958
anchor_top = 0.0448519
anchor_right = 0.730042
anchor_bottom = 0.935185
margin_left = -0.320007
margin_top = -0.440002
margin_right = 0.319946
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="logo" type="TextureRect" parent="menu"]
margin_right = 884.0
margin_bottom = 445.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="online_btn" type="Button" parent="menu"]
margin_top = 474.0
margin_right = 884.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer en ligne"

[node name="lan_btn" type="Button" parent="menu"]
margin_top = 603.0
margin_right = 884.0
margin_bottom = 703.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer en LAN"

[node name="local_btn" type="Button" parent="menu"]
margin_top = 732.0
margin_right = 884.0
margin_bottom = 832.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Jouer en local"

[node name="deck_btn" type="Button" parent="menu"]
margin_top = 861.0
margin_right = 884.0
margin_bottom = 961.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Modifier les decks"
